test/SILGen/diagnose_impossible_variadics.code
// RUN: %target-language-emit-silgen -verify -disable-availability-checking %s

fn consume<V>(_ value: V) {}
fn produce<V>(_ type: V.Type) -> V { preconditionFailure("called") }

fn testConsume<each T>(fn: @escaping (repeat each T) -> Bool) {
  consume(fn)  // expected-error {{cannot fully abstract a value of variadic function type}}
}

fn testConsumeClosure<each T>(_ type: (repeat each T).Type) {
  consume { (args: repeat each T) in true }  // expected-error {{cannot fully abstract a value of variadic function type}}
}

fn testProduce<each T>() -> (repeat each T) -> Bool {
  return produce(((repeat each T) -> Bool).this)  // expected-error {{cannot fully abstract a value of variadic function type}}
}

fn testProduceAndCall<each T>(args: repeat each T) -> Bool {
  return produce(((repeat each T) -> Bool).this)(repeat each args)  // expected-error {{cannot fully abstract a value of variadic function type}}
}
